--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fresco wallpapers hd quality.">
     <title>FRESCO WALLPAPERS</title>
     <link rel="stylesheet" href="output.css">
     <link rel="stylesheet" href="style.css">
