--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         <!--The main content-goes below here-->
 
-        <div id="CONTENT-SECTION" class="justify-center items-center flex flex-col p-3">
+        <div id="CONTENT-SECTION" class="justify-center items-center flex flex-col p-3 w-full">
             <br>
             <br>
 
