--- a/index.html
+++ b/index.html
@@ -143,13 +143,13 @@
             </div>
 
             <div id="sort-controls" class="p-5">
-                <button id="date-added">Date added</button>
+                <button id="date-added">Date</button>
                 <button id="randomizer">Random</button>
                 <button id="relevancer">Relevance</button>
             </div>
 
             <div id="Filter-controls" class="p-5">
-                <button>Coming soon</button>
+                <button>SOON</button>
             </div>
 
             <div id="categories" class="p-5">
