--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 </head>
 
 <body id="bg">
-
-    <div id="PL" class="flex flex-col justify-center items-center bg-white ">
+    <div class="loader-container" id="LOADER">
         <p class="oh text-black" id="OH!"></p>
-        <div class="flex flex-row  justify-between bg-transparent  border-none border-transparent p-2 rounded-full" id="mainload">
-            <div class="w-10 h-10 rounded-full bg-red-500 border-solid border-2 border-black" id="liload">
-            </div>
-            <p>LOADING</p>
-            <div class="w-10 h-10 rounded-full bg-red-500 border-solid border-2 border-black" id="liload2">
-            </div>
+        <div class="loader">
+            <div class="loader-inner"></div>
         </div>
+        <div class="loading-text">Loading...</div>
     </div>
+
+        
+    
 
     <div class="MAIN">
         <div id="NAVBAR-SECTION">
