--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 
 <body id="bg">
+    
     <div class="loader-container" id="LOADER">
         <div class="loader">
             <div class="loader-inner"></div>
         </div>
-        <div class="loading-text">Loading...</div>
-        <p id="OH">.</p>
+        <div class="loading-text" id="OH">Loading...</div>
     </div>
 
         
