--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
             <a href="#NAVBAR-SECTION">
                 <div id="UP-TOP">
-                    <img src="assets/up-arrow.svg" alt="back to top" class="w-16">
+                    <img src="assets/up-arrow.svg" alt="back to top"  id="BTTP">
                 </div>
             </a>
 
