--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         
 
 
-        <div class="w-3/6 flex flex-row justify-between items-center gap-5 p-5 bg-white">
+        <div class="w-full flex flex-row justify-between items-center gap-5 p-5 bg-white">
                 
 
             <div>
