--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
             </div>
 
             <div id="no-more-images" style="display: none;" class="w-full justify-center items-center flex-col gap-5">
-                <p class="heading">Woops!! Nothing here!!</p>
+                <p class="heading" id="ENDER1">Woops!! Nothing here!!</p>
                 <img src="assets/spaceman.gif" alt="" class="endIMg">
-                <p class="heading">You have reached the end of the content.</p>
+                <p class="heading" id="ENDER2">No more Images</p>
             </div>
 
         </div>
