--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
                     <p class="heading2 border-solid border-black border-2 p-1 " id="SC"><span>&#9870</span> Sort</p>
                     <p class="heading2 border-solid border-black border-2 p-1 " id="FC"><span>&#9730</span>Filter</p>
                     <p class="heading2 border-solid border-black border-2 p-1 " id="CT"><span>&#x01C2</span>General</p>
+                    <div class="dropdown" >
+                        <button class="dropbtn border-solid border-black border-2 p-1" id="CT2">Entries</button>
+                        <div class="dropdown-content">
+                          <a href="#">25</a>
+                          <a href="#">50</a>
+                          <a href="#">100</a>
+                        </div>
+                      </div>
                 </div>
                 
                 
