--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="output.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon" id="favicon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body id="bg">
@@ -74,6 +75,9 @@
             </nav>
             <!--The popup after pressing the menu button-->
             <div class="" id="MENUPOP">
+                <div id="MP2">
+                    <p>.</p>
+                </div>
                 <img src="assets/favicon.svg" alt="" class="icon2">
                 <br>
                 <ul class="flex flex-col justify-center items-center gap-2" id="NAV-LIST2">
@@ -96,8 +100,6 @@
                     <button class="text-white" onclick="switcher()">Dark/light Mode</button>
 
                 </ul>
-                <img src="assets/close.svg" alt="" id="CLOSE-BTN" class="w-8 hover:cursor-pointer"
-                    onclick="toggleNavbar()">
             </div>
         </div>
 
