--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="flex flex-row justify-between border-solid border-2 rounded-full" id="surch2">
-                        <input type="text" placeholder="search wallpapers" class="" id="display2">
+                        <input type="text" placeholder="search wallpapers" id="display2">
 
                         <div class="surcher bg-cyan-300" onclick="fetchImages()">
                             <img src="assets/search.svg" alt="" id="search2">
@@ -174,7 +174,7 @@
 
             <div id="no-more-images" style="display: none;" class="w-full justify-center items-center flex-col gap-5">
                 <p class="heading" id="ENDER1">Woops!! Nothing here!!</p>
-                <img src="assets/spaceman.gif" alt="" class="endIMg">
+                <img src="assets/spaceman.gif" alt="" class="endIMg" id="EI">
                 <p class="heading" id="ENDER2">No more Images</p>
             </div>
 
