--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <img src="assets/twitter.svg" alt="twitter" class="cimg w-10 hover:cursor-pointer">
                 </a>
 
-                <a href="https://https://brianali.netlify.app/" target="_blank">
+                <a href="https://brianali.netlify.app/" target="_blank">
                     <img src="assets/bag.svg" alt="Linkedin" class="cimg w-10 hover:cursor-pointer">
                 </a>
                 
